--- a/src/azure-function-example-csharp.csproj
+++ b/src/azure-function-example-csharp.csproj
@@ -6,7 +6,10 @@
 		<RootNamespace>azure_function_example_csharp</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
+		<PackageReference Include="Azure.Identity" Version="1.9.0" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.13.0" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Core" Version="1.12.1" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.5.1" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.10.0" />
 		<PackageReference Include="Microsoft.Azure.WebJobs.Extensions.OpenApi" Version="1.5.1" />
